mini projetos js

--- a/00_exercicios/mini_projects/01_num_positivo_negativo/index.html
+++ b/00_exercicios/mini_projects/01_num_positivo_negativo/index.html
@@ -48,7 +48,7 @@
             <div class="input">
                 <input type="number" id="number" placeholder="Digite um número." />
             </div>
-            <button class="submit">
+            <button class="submit"> <!--pode ser que esteja errado essa linha-->
                 Verificar
             </button>
         </form>
