--- a/00_exercicios/mini_projects/014_dias_do_mes/index.html
+++ b/00_exercicios/mini_projects/014_dias_do_mes/index.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Par ou Impar</title>
+    <title>Quantos dias do mês</title>
 </head>
 
 <body>
     <div class="container">
         <h1>
-            Par ou Impar
+            Quantos dias o mês tem
         </h1>
         <div class="formContainer">
             <h2>
                 Resultado: <span class="spanValue"></span>
             </h2>
-            <form id="formControl">
+            <form id="formMonth">
                 <div>
-                    Digite o primeiro número: <input type="text" id="numberImput" />
+                    Digite o mês para saber quantos dias ele tem: <input type="text" id="monthInput"
+                        placeholder="EX: 2" />
                 </div>
                 <button type="submit">
                     Verificar
